data/derived/fa15/progs/unify/prog4007.ml.out
Characters 77-80:
  | h::t -> matchHeads (t);;
                       ^^^
Error: This expression has type char list
       but an expression was expected of type 'a list list
       Type char is not compatible with type 'a list 
